--- a/styles/colorpag.css
+++ b/styles/colorpag.css
@@ -3837,8 +3837,10 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
 }
 @media screen and (max-width:1024px) {
     .mdl-layout__header {
-        min-height:56px
+        min-height:56px;
+          background: url("../img/header2.jpg") center/cover;
     }
+    
 }
 .mdl-layout--fixed-drawer.is-upgraded:not(.is-small-screen)>.mdl-layout__header {
     margin-left:240px;
