--- a/styles/colorpag.css
+++ b/styles/colorpag.css
@@ -3053,7 +3053,8 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
     justify-content:space-between;
     padding:32px 16px;
     color:#9e9e9e;
-    background-color:#424242
+    background-color:#26a79d;
+    
 }
 .mdl-mini-footer:after {
     content:'';
