--- a/styles/colorpag.css
+++ b/styles/colorpag.css
@@ -3686,7 +3686,9 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
     box-shadow:0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
     box-sizing:border-box;
     border-right:1px solid #e0e0e0;
-    background:#fafafa;
+    background-image: url("../img/menucel2.png");
+    background-position: center;
+    background-size: cover;
     -webkit-transform:translateX(-250px);
     transform:translateX(-250px);
     -webkit-transform-style:preserve-3d;
@@ -3696,7 +3698,7 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
     transition-timing-function:cubic-bezier(.4, 0, .2, 1);
     transition-property:transform;
     transition-property:transform, -webkit-transform;
-    color:#424242;
+  
     overflow:visible;
     overflow-y:auto;
     z-index:5
@@ -3739,11 +3741,13 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
     flex-shrink:0;
     padding:16px 40px;
     margin:0;
-    color:#757575
+    color:#26a79d;
+    font-size: 18px;
+    text-shadow: 10;
 }
 @media screen and (max-width:1024px) {
     .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
-        padding:16px
+        padding:20px
     }
 }
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
@@ -3875,7 +3879,7 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple, .m
 .mdl-layout__header.is-compact {
 
     max-height:64px;
-      background: url("../img/header01.jpg") center/cover;
+      background: url("../img/header2.jpg") center/cover;
 }
 @media screen and (max-width:1024px) {
     .mdl-layout__header.is-compact {
